test_cases/pass/p41.lxr
SCRIPT AREA
START SCRIPT
DECLARE FLOAT f
FOR (f=0.0, f < 3.0, f=f+1.0)
START FOR
    PRINT: f & " "
END FOR
END SCRIPT
