test_cases/fail/f37.lxr
SCRIPT AREA
START SCRIPT
DECLARE FLOAT f
f=1.5
REPEAT WHEN (f)
START REPEAT
    f=f-0.5
END REPEAT
END SCRIPT
